--- a/TICTACTOE_5x5_game/TICTACTOE_5x5_game/MainWindow.xaml
+++ b/TICTACTOE_5x5_game/TICTACTOE_5x5_game/MainWindow.xaml
@@ -7,10 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="1200" Width="1200">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="19*"/>
-        </Grid.ColumnDefinitions>
         <Button x:Name="bt1_1" Tag="0.0" Click="Button_Click"  Content="Button" HorizontalAlignment="Left" Margin="110,93,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
         <Button x:Name="bt1_2" Tag="0.1" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="162,93,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
         <Button x:Name="bt1_3" Tag="0.2" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="214,93,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
@@ -36,7 +32,13 @@
         <Button x:Name="bt5_3" Tag="4.2" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="214,301,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
         <Button x:Name="bt5_4" Tag="4.3" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="266,301,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
         <Button x:Name="bt5_5" Tag="4.4" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="318,301,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Label  x:Name="TimerLabel" Content="0" Grid.Column="1" FontFamily="Segoue Ui" FontSize="50" HorizontalAlignment="Left" Margin="555,72,0,0" VerticalAlignment="Top"/>
-        <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="757,270,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <Label  x:Name="TimerLabel" Content="0" Grid.Column="1" FontFamily="Segoue Ui" FontSize="50" HorizontalAlignment="Left" Margin="555,72,0,0" VerticalAlignment="Top" Height="70" Width="37"/>
+        <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="892,93,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1" Height="20"/>
+        <TextBox  x:Name="Player1Textbox" Grid.Column="1"  HorizontalAlignment="Left" Height="23" Margin="555,178,0,0" TextWrapping="Wrap" Text="Wprowadź imię" VerticalAlignment="Top" Width="130"/>
+        <TextBox x:Name="Player2Textbox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="555,212,0,0" TextWrapping="Wrap" Text="Wprowadź imię" VerticalAlignment="Top" Width="130"/>
+        <Label x:Name="Player1Label" Content="PLAYER1" Grid.Column="1" HorizontalAlignment="Left" Margin="497,178,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.132,-0.269" Height="26" Width="56"/>
+        <Label x:Name="Player2Label" Content="PLAYER2" Grid.Column="1" HorizontalAlignment="Left" Margin="497,212,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.132,-0.269" Height="26" Width="56"/>
+        <Button Content="Zatwierdź imiona" HorizontalAlignment="Left" Margin="570,249,0,0" VerticalAlignment="Top" Width="100" Click="Button_Click_2"/>
+
     </Grid>
 </Window>
