--- a/TICTACTOE_5x5_game/TICTACTOE_5x5_game/MainWindow.xaml
+++ b/TICTACTOE_5x5_game/TICTACTOE_5x5_game/MainWindow.xaml
@@ -5,40 +5,46 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TICTACTOE_5x5_game"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1200" Width="1200">
+        Title="MainWindow" Height="650" Width="900">
     <Grid>
-        <Button x:Name="bt1_1" Tag="0.0" Click="Button_Click"  Content="Button" HorizontalAlignment="Left" Margin="110,93,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt1_2" Tag="0.1" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="162,93,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt1_3" Tag="0.2" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="214,93,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt1_4" Tag="0.3" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="266,93,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt1_5" Tag="0.4" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="318,93,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt2_1" Tag="1.0" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="110,145,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt2_2" Tag="1.1" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="162,145,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt2_3" Tag="1.2" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="214,145,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt2_4" Tag="1.3" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="266,145,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt2_5" Tag="1.4" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="318,145,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt3_1" Tag="2.0" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="110,197,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt3_2" Tag="2.1" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="162,197,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt3_3" Tag="2.2" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="214,197,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt3_4" Tag="2.3" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="266,197,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt3_5" Tag="2.4" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="318,197,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt4_1" Tag="3.0" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="110,249,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt4_2" Tag="3.1" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="162,249,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt4_3" Tag="3.2" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="214,249,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt4_4" Tag="3.3" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="266,249,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt4_5" Tag="3.4" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="318,249,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt5_1" Tag="4.0" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="110,301,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt5_2" Tag="4.1" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="162,301,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt5_3" Tag="4.2" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="214,301,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt5_4" Tag="4.3" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="266,301,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Button x:Name="bt5_5" Tag="4.4" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="318,301,0,0" VerticalAlignment="Top" Width="47" Height="47" Grid.Column="1"/>
-        <Label  x:Name="TimerLabel" Content="0" Grid.Column="1" FontFamily="Segoue Ui" FontSize="50" HorizontalAlignment="Left" Margin="555,72,0,0" VerticalAlignment="Top" Height="70" Width="37"/>
-        <Button Content="Button" Grid.Column="1" HorizontalAlignment="Left" Margin="892,93,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1" Height="20"/>
+        <Button x:Name="bt1_1" Tag="0.0" Click="Button_Click"  Content="Button" HorizontalAlignment="Left" Margin="87,93,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt1_2" Tag="0.1" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="139,93,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt1_3" Tag="0.2" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="191,93,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt1_4" Tag="0.3" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="243,93,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt1_5" Tag="0.4" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="295,93,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt2_1" Tag="1.0" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="87,145,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt2_2" Tag="1.1" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="139,145,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt2_3" Tag="1.2" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="191,145,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt2_4" Tag="1.3" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="243,145,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt2_5" Tag="1.4" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="295,145,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt3_1" Tag="2.0" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="87,197,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt3_2" Tag="2.1" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="139,197,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt3_3" Tag="2.2" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="191,197,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt3_4" Tag="2.3" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="243,197,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt3_5" Tag="2.4" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="295,197,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt4_1" Tag="3.0" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="87,249,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt4_2" Tag="3.1" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="139,249,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt4_3" Tag="3.2" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="191,249,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt4_4" Tag="3.3" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="243,249,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt4_5" Tag="3.4" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="295,249,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt5_1" Tag="4.0" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="87,301,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt5_2" Tag="4.1" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="139,301,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt5_3" Tag="4.2" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="191,301,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt5_4" Tag="4.3" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="243,301,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Button x:Name="bt5_5" Tag="4.4" Click="Button_Click" Content="Button" HorizontalAlignment="Left" Margin="295,301,0,0" VerticalAlignment="Top" Width="47" Height="47"/>
+        <Label  x:Name="TimerLabel" Content="0" FontFamily="Segoue Ui" FontSize="50" HorizontalAlignment="Left" Margin="600,95,0,0" VerticalAlignment="Top" Height="70" Width="37"/>
         <TextBox  x:Name="Player1Textbox" Grid.Column="1"  HorizontalAlignment="Left" Height="23" Margin="555,178,0,0" TextWrapping="Wrap" Text="Wprowadź imię" VerticalAlignment="Top" Width="130"/>
         <TextBox x:Name="Player2Textbox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="555,212,0,0" TextWrapping="Wrap" Text="Wprowadź imię" VerticalAlignment="Top" Width="130"/>
         <Label x:Name="Player1Label" Content="PLAYER1" Grid.Column="1" HorizontalAlignment="Left" Margin="497,178,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.132,-0.269" Height="26" Width="56"/>
         <Label x:Name="Player2Label" Content="PLAYER2" Grid.Column="1" HorizontalAlignment="Left" Margin="497,212,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.132,-0.269" Height="26" Width="56"/>
-        <Button Content="Zatwierdź imiona" HorizontalAlignment="Left" Margin="570,249,0,0" VerticalAlignment="Top" Width="100" Click="Button_Click_2"/>
-
+        <Button Content="Zatwierdź imiona" HorizontalAlignment="Left" Margin="555,249,0,0" VerticalAlignment="Top" Width="130" Click="Button_Click_1" Height="31"/>
+        <Label x:Name="Winner" FontSize="40" Content="" HorizontalAlignment="Left" Margin="295,512,0,0" VerticalAlignment="Top" Width="490"/>
+        <Label  x:Name="Winner_text" FontSize="40" Content="" HorizontalAlignment="Left" Margin="147,512,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="Stoper" FontSize="30" Content="Czas: " HorizontalAlignment="Left" Margin="497,103,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="licznikp1" FontSize="30" Content="0" HorizontalAlignment="Left" Margin="497,350,0,0" VerticalAlignment="Top" Width="33" RenderTransformOrigin="0.757,10.038"/>
+        <Label x:Name="licznikp2"  FontSize="30" Content="0" HorizontalAlignment="Left" Margin="697,350,0,0" VerticalAlignment="Top" Width="33" RenderTransformOrigin="0.757,10.038"/>
+        <Label x:Name="gracz1" FontSize="20" Content="" HorizontalAlignment="Left" Margin="675,301,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.263,0.192" Width="180"/>
+        <Label x:Name="gracz2"  FontSize="20" Content="" HorizontalAlignment="Left" Margin="480,301,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.263,0.192" Width="180"/>
+        <Label Content="Wciśnij, aby zacząć grę --> " FontSize="13" HorizontalAlignment="Left" Margin="385,251,0,0" VerticalAlignment="Top" Width="165"/>
     </Grid>
 </Window>
